--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,8 @@
 
 body {
   margin: 0;
+  padding: 0;
+  color: white;
   font-family: 'Varela Round', sans-serif;
   // font-family: 'Merienda', cursive;
 
