--- a/src/index.scss
+++ b/src/index.scss
@@ -3,12 +3,13 @@
 
 
 body {
-  margin: 0;
-  padding: 0;
   color: white;
   font-family: 'Varela Round', sans-serif;
   // font-family: 'Merienda', cursive;
-
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
 
