--- a/src/component/ActiveQuiz/ActiveQuiz.scss
+++ b/src/component/ActiveQuiz/ActiveQuiz.scss
@@ -1,7 +1,7 @@
 .active-quiz {
   padding: 20px;
-  color: white;
-  border: 2px solid white;
+  color: #4fc18c;
+  box-shadow: 1px 1px 15px #144228;
   border-radius: 5px;
   margin: 0 10px;
   box-sizing: border-box;
