--- a/src/component/Navigation/Drawer/Drawer.scss
+++ b/src/component/Navigation/Drawer/Drawer.scss
@@ -5,10 +5,9 @@
 	bottom: 0;
 	width: 80%;
 	max-width: 300px;
-	padding: 20px 10px;
+	padding: 20px 0px;
 	box-sizing: border-box;
-	background: rgb(0, 0, 0);
-  color: rgb(0, 0, 0);
+	background: rgba(0, 0, 0, 0.5);
 	transform: translateX(0px);
 	transition: transform .22s ease-in;
 	z-index: 90;
@@ -32,7 +31,7 @@
         justify-content: center;
 				font-size: 30px;
 				text-decoration: none;
-				background-color: rgb(255, 255, 255);
+        color: rgb(255, 255, 255);
 				position: relative;
 				padding: 0;
 				transition: opacity .3s;
@@ -42,5 +41,5 @@
 	}
 }
 .drawer ul li a:hover, .active {
-	opacity: .6;
+  background: url(../../../containers/QuizList/1.jpg);
 }
