--- a/src/component/UI/Input/Input.scss
+++ b/src/component/UI/Input/Input.scss
@@ -1,32 +1,32 @@
 .input {
-  margin-bottom: 15px;
+	margin-bottom: 15px;
+
+	label {
+		margin-bottom: 3px;
+		padding: 0;
+		display: block;
+		color: #313131;
+	}
+
+	input {
+		display: block;
+    height: 35px;
+		box-sizing: border-box;
+		padding: 7px;
+		border: 2px solid #7700ff;
+		border-radius: 8px;
+		width: 100%;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+		outline: none;
+		transition: all 300ms ease-in-out;
+	}
+
+	span {
+		color: #af0000;
+		font-size: 13px;
+		letter-spacing: 1px;
+		font-weight: bold;
+	}
 }
 
-.input label {
-  margin-bottom: 3px;
-  padding: 0;
-  display: block;
-  font-weight: bold;
-}
-
-.input input {
-  display: block;
-  box-sizing: border-box;
-  padding: 7px;
-  border: 1px solid #bebebe;
-  margin: 0 0 5px;
-  width: 100%;
-  outline: none;
-  transition: all 300ms ease-in-out;
-}
-
-.input span {
-  color: #f01f30;
-  font-size: 16px;
-  letter-spacing: 1px;
-  font-weight: bold;
-}
-
-.input.invalid label {
-  color: #f01f30;
-}
