--- a/src/containers/QuizList/QuizList.scss
+++ b/src/containers/QuizList/QuizList.scss
@@ -4,7 +4,12 @@
   padding-top: 100px;
   flex-grow: 1;
   width: 100%;
-  background-color: rgb(0, 0, 0);
+  background-image: url(./1.jpg);
+  background-size: cover;
+	background-position: center;
+
+  background-repeat: no-repeat;
+
 }
 
 .quiz-list h1 {
