--- a/src/containers/Auth/Auth.scss
+++ b/src/containers/Auth/Auth.scss
@@ -25,7 +25,7 @@
 	padding: 40px 20px;
 	border-radius: 5px;
 	width: 320px;
-	min-height: 400px;
+  min-height: 350;
 }
 
 .container {
@@ -36,5 +36,5 @@
 .auth-form-btn {
 	display: flex;
 	justify-content: center;
-	margin-top: 50px;
+	margin-top: 40px;
 }
