--- a/src/component/UI/Input/Input.scss
+++ b/src/component/UI/Input/Input.scss
@@ -1,9 +1,9 @@
 .input {
-  height: 85px;
+  height: 70px;
 
 	label {
 		display: block;
-		color: #6d008f;
+		color: #000000;
     letter-spacing: 1px;
 	}
 
@@ -22,7 +22,7 @@
 	}
 
 	span {
-		color: #b80000;
+		color: #ff0000;
 		font-size: 12px;
 		letter-spacing: 1px;
 		// font-weight: bold;
