--- a/src/containers/Auth/Auth.scss
+++ b/src/containers/Auth/Auth.scss
@@ -38,3 +38,15 @@
 	justify-content: center;
 	margin-top: 40px;
 }
+
+.auth .input {
+  height: 85px;
+}
+
+.auth label {
+  color: rgb(87, 0, 145);
+}
+
+.auth .input span {
+  color: #ab0000;
+}
