--- a/src/component/ActiveQuiz/ActiveQuiz.scss
+++ b/src/component/ActiveQuiz/ActiveQuiz.scss
@@ -1,7 +1,6 @@
 .active-quiz {
   padding: 20px;
-  color: #4fc18c;
-  box-shadow: 1px 1px 15px #144228;
+  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
   border-radius: 5px;
   margin: 0 10px;
   box-sizing: border-box;
@@ -10,4 +9,14 @@
 .question {
   display: flex;
   justify-content: space-between;
+  color: rgb(1, 255, 242);
+  letter-spacing: 1px;
+  font-size: 17px;
+  margin-bottom: 20px;
+  min-height: 50px;
+}
+
+.question small {
+  font-weight: bold;
+  margin-left: 20px;
 }
