--- a/src/component/ActiveQuiz/AnswersList/AnswerItem/AnswerItem.scss
+++ b/src/component/ActiveQuiz/AnswersList/AnswerItem/AnswerItem.scss
@@ -1,17 +1,16 @@
 .answer-item {
-  color: rgb(87, 134, 118) ;
-  box-shadow:  -1px -1px 2px rgb(87, 134, 118);
   border-radius: 5px;
-  padding: 5px 10px;
+  padding: 10px;
   margin-bottom: 8px;
   cursor: pointer;
+  color: rgb(255, 255, 255) ;
+  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+  transition: all .2s ease-in-out;
+  font-weight: 600;
+  letter-spacing: 1;
 
   &:hover {
-    background: rgb(33, 59, 50);
-    color: rgb(0, 199, 133) ;
-    box-shadow: -1px -1px 2px rgb(115, 224, 188), 
-                1px 1px 2px rgb(115, 224, 188);
-    transition: all .2s ease-in-out;
+   
   }
 }
 
@@ -23,7 +22,7 @@
 }
 
 .answer-item.error {
-  background-color: #ff3131;
+  background-color: #ff2020;
   color: rgb(0, 0, 0);
   font-weight: 600;
   letter-spacing: 1;
