--- a/src/component/FinishedQuiz/FinishedQuiz.scss
+++ b/src/component/FinishedQuiz/FinishedQuiz.scss
@@ -1,31 +1,50 @@
 .finished-quiz {
 	padding: 20px;
 	color: white;
-	border: 2px solid white;
+	box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
 	border-radius: 5px;
 	box-sizing: border-box;
-	margin: 0 10px;
 
 	ul {
 		list-style: none;
-		padding: 0;
+		padding: 10px;	
 		margin: 0;
+    // box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+    margin-bottom: 20px;
 
 		li {
 			i {
 				margin-left: 10px;
 				&.green {
-					color: green;
+					color: rgb(0, 255, 0);
 				}
 				&.red {
-					color: red;
+					color: rgb(255, 0, 0);
 				}
 			}
 		}
 	}
 }
 
+.finished-quiz-head {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  margin-bottom: 15px;
+  padding: 10px 15px;
+  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+  color: rgb(1, 255, 242);
+}
+
 .result {
-  color: aquamarine;
-  margin: 10px 0;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+
+.finished-quiz-btn {
+  display: flex;
+}
+
+.btn-all-test {
+  text-decoration: none;
 }
