--- a/src/containers/QuizList/QuizList.scss
+++ b/src/containers/QuizList/QuizList.scss
@@ -7,13 +7,17 @@
   background-image: url(./1.jpg);
   background-size: cover;
 	background-position: center;
-
   background-repeat: no-repeat;
-
 }
 
 .quiz-list h1 {
   color: white;
+  font-size: 50px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-align: center;
+  margin-bottom: 50px;
+  border-bottom: 2px solid rgb(255, 255, 255);
 }
 
 .quiz-list ul {
@@ -23,10 +27,25 @@
 }
 
 .quiz-list li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
-  color: white;
+  color: rgb(255, 255, 255);
+  padding: 15px;
+  margin-bottom: 10px;
+  letter-spacing: 1px;
+  font-size: 20px;
+  width: 300px;
+  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+  transition: all .2s ease-in-out;
+}
+
+.quiz-list li:hover {
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.13);
 }
 
 .quiz-list li a:hover {
-  color: aquamarine;
+  color: rgb(1, 255, 242);
+  letter-spacing: 2px;
 }
