--- a/src/component/Navigation/MenuToggle/MenuToggle.scss
+++ b/src/component/Navigation/MenuToggle/MenuToggle.scss
@@ -7,9 +7,12 @@
   color: white;
   transition: opacity, left .20s ease-in;
   z-index: 100;
+  text-shadow: 2px 2px 15px rgb(0, 195, 255), 
+              -2px -2px 15px rgb(0, 195, 255);
 
   &:hover {
-    opacity: .6;
+    text-shadow: 2px 2px 15px rgb(0, 255, 21), 
+              -2px -2px 15px rgb(0, 255, 21);
   }
 }
 
