--- a/src/containers/QuizCreator/QuizCreator.scss
+++ b/src/containers/QuizCreator/QuizCreator.scss
@@ -1,7 +1,7 @@
 .quiz-creator {
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding-top: 150px;
   flex-grow: 1;
   width: 100%;
   color: rgb(255, 255, 255);
