--- a/src/containers/QuizList/QuizList.scss
+++ b/src/containers/QuizList/QuizList.scss
@@ -17,7 +17,7 @@
   letter-spacing: 2px;
   text-align: center;
   margin-bottom: 50px;
-  border-bottom: 2px solid rgb(255, 255, 255);
+  border-bottom: 3px solid rgb(255, 255, 255);
 }
 
 .quiz-list ul {
@@ -31,11 +31,12 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  color: rgb(255, 255, 255);
+  color: rgb(255, 142, 142);
   padding: 15px;
   margin-bottom: 10px;
-  letter-spacing: 1px;
-  font-size: 20px;
+  letter-spacing: 2px;
+  font-size: 21px;
+  font-weight: bold;
   width: 300px;
   box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
   transition: all .2s ease-in-out;
@@ -46,6 +47,7 @@
 }
 
 .quiz-list li a:hover {
-  color: rgb(1, 255, 242);
+  color: rgb(255, 116, 116);
+  text-shadow: 1px 1px 1px black;
   letter-spacing: 2px;
 }
